# e_commerce_assistant

./: .dockerignore  .env.example  .gitignore  .talismanrc  Dockerfile  PRODUCTION_REPORT.md  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
app/: __init__.py  config.py  guardrails.py  main.py  metrics.py
app/agents/: base.py  compound_router.py  escalation_agent.py  general_agent.py  intent_classifier.py  orchestrator.py  order_agent.py  product_agent.py  returns_agent.py  synthesizer_agent.py
app/middleware/: auth.py
app/queue/: review_queue.py
app/state/: models.py  session.py
app/tools/: customers.py  orders.py  products.py  returns.py
data/: mock_customers.json  mock_orders.json  mock_products.json  mock_returns.json  qa_dataset.json
demos/: mock_demo.py  run_scenarios.py
docs/: ARIZE_FDE_INTERVIEW_GUIDE.md  CLIENT_DEMO_GUIDE.md  END_TO_END_WALKTHROUGH.md  OBSERVABILITY_WALKTHROUGH.md  OPERATIONS_GUIDE.md  STAGE_1_BUG_FIXES.md  STAGE_2_API_HARDENING.md  STAGE_3_OBSERVABILITY.md  STAGE_4_CICD.md  STAGE_5_EVALUATION.md  STAGE_6_INFRASTRUCTURE.md
evaluation/: __init__.py  evaluate.py  llm_evaluator.py  run_llm_eval.py
experiments/: compare_models.py  model_comparison.py
experiments/results/: experiment_summary.json  llama3_2_3b.json  mistral_7b.json  smollm2_135m.json
monitoring/: prometheus.yml
nginx/: nginx.conf
tests/: __init__.py  test_agents.py  test_app.py  test_guardrails.py  test_tools.py
tests/integration/: test_integration.py
