[project]
name = "customer-service-ai"
version = "1.0.0"
description = "AI-powered customer service application with guardrails"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "langchain>=0.1.0",
    "langchain-ollama>=0.1.0",
    "httpx>=0.25.0",
    "numpy>=1.26.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "arize-phoenix>=4.0.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    # Production hardening additions
    "slowapi>=0.1.9",
    "prometheus-client>=0.19.0",
    "structlog>=24.0.0",
    "tenacity>=8.2.0",
    # LLM-as-judge evaluation
    "anthropic>=0.40.0",
    # Redis session store
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "evaluation*", "tests*"]
exclude = ["data*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests requiring live services (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # Line length handled by formatter
